@@ -12,7 +12,7 @@
 /*  along with SCIP; see the file COPYING. If not email to scip@zib.de.      */
 /*                                                                           */
 /* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
-#pragma ident "@(#) $Id: presol_dualfix.c,v 1.30 2008/04/17 17:49:12 bzfpfets Exp $"
+#pragma ident "@(#) $Id: presol_dualfix.c,v 1.31 2008/05/14 14:31:21 bzfpfend Exp $"
 
 /**@file   presol_dualfix.c
  * @brief  fixing roundable variables to best bound
@@ -116,12 +116,28 @@ SCIP_DECL_PRESOLEXEC(presolExecDualfix)
 	 if( SCIPvarMayRoundDown(vars[v]) && !SCIPisNegative(scip, obj) )
 	 {
 	    bound = SCIPvarGetLbGlobal(vars[v]);
+            if ( SCIPisZero(scip, obj) && SCIPvarGetNLocksUp(vars[v]) == 1 && SCIPisInfinity(scip, -bound) )
+            {
+               /* variable can be set to -infinity, and it is only contained in one constraint:
+                * we hope that the corresponding constraint handler is clever enough to set/aggregate the variable
+                * to something more useful than -infinity and do nothing here
+                */
+               continue;
+            }
 	    SCIPdebugMessage("variable <%s> with objective %g fixed to lower bound %g\n",
 			     SCIPvarGetName(vars[v]), SCIPvarGetObj(vars[v]), bound);
 	 }
 	 else if( SCIPvarMayRoundUp(vars[v]) && !SCIPisPositive(scip, obj) )
 	 {
 	    bound = SCIPvarGetUbGlobal(vars[v]);
+            if ( SCIPisZero(scip, obj) && SCIPvarGetNLocksDown(vars[v]) == 1 && SCIPisInfinity(scip, bound) )
+            {
+               /* variable can be set to +infinity, and it is only contained in one constraint:
+                * we hope that the corresponding constraint handler is clever enough to set/aggregate the variable
+                * to something more useful than +infinity and do nothing here
+                */
+               continue;
+            }
 	    SCIPdebugMessage("variable <%s> with objective %g fixed to upper bound %g\n",
 			     SCIPvarGetName(vars[v]), SCIPvarGetObj(vars[v]), bound);
 	 }
